removed word-wrap as there is no pattern to prevent wordwrapping at other columns

--- a/css/edoweb_lbz.css
+++ b/css/edoweb_lbz.css
@@ -122,10 +122,10 @@ td {
 
 }
 
-td .item-list ul li a {
+/*td .item-list ul li a {
   word-wrap: break-word;
   word-break: break-word;
-}
+}*/
 
 table:not([tableheader-processed]) th {
   background-repeat: no-repeat;
